--- a/app/src/main/res/layout/activity_setting_stat.xml
+++ b/app/src/main/res/layout/activity_setting_stat.xml
@@ -121,13 +121,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:text="  스킬 스탯"
+                android:text="  직업 스킬 스탯"
                 android:lineSpacingExtra="5dp"
                 android:textSize="17sp"
                 android:textColor="#818181"/>
             <TextView
                 style="@style/SettingInfoTextview"
-                android:text="STR : 20 (+200)"
+                android:text="STR : 20"
+                tools:ignore="OnClick" />
+            <TextView
+                style="@style/SettingInfoTextview"
+                android:text="DEX : 20"
+                tools:ignore="OnClick" />
+            <TextView
+                style="@style/SettingInfoTextview"
+                android:text="INT : 20"
+                tools:ignore="OnClick" />
+            <TextView
+                style="@style/SettingInfoTextview"
+                android:text="LUK : 20"
                 tools:ignore="OnClick" />
             <TextView
                 style="@style/SettingInfoTextview"
